--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2018"
 
 [dependencies]
 nvenc-sys = { git = "https://github.com/crab2313/nvenc-sys.git" }
+
+[dev-dependencies]
+cuda = { version = "0.4.0-pre", features = ["cuda_10_1"] }
