--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2018"
 
 [dependencies]
 nvenc-sys = { git = "https://github.com/crab2313/nvenc-sys.git" }
+enum-primitive-derive = "0.1"
+num-traits = "0.1"
 
 [dev-dependencies]
 cuda = { version = "0.4.0-pre", features = ["cuda_10_1"] }
